Aktualizacja dokumentacji o endpointy do autoryzacji
